--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,17 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
+    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-mixpush-v3.14.10.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-push-v3.14.10.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-sdk-v3.14.10.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-statistics-v3.14.10.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/fastjson.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/HwPush_SDK_V2705.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/Java-WebSocket-1.3.2-leancloud.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/MiPush_SDK_Client_3_0_3.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/okhttp-2.6.0-leancloud.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/okio-1.6.0-leancloud.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/protobuf-java-2.6.1.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/qq.sdk.1.6.1.jar')
+    compile files('D:/Workspaces/Android/Drop/libs/weibo.sdk.android.sso.3.0.1-leancloud.jar')
 }
