--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "com.fishpondking.android.drop"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -24,21 +26,30 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
-    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-mixpush-v3.14.10.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-push-v3.14.10.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-sdk-v3.14.10.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/avoscloud-statistics-v3.14.10.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/fastjson.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/HwPush_SDK_V2705.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/Java-WebSocket-1.3.2-leancloud.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/MiPush_SDK_Client_3_0_3.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/okhttp-2.6.0-leancloud.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/okio-1.6.0-leancloud.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/protobuf-java-2.6.1.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/qq.sdk.1.6.1.jar')
-    compile files('D:/Workspaces/Android/Drop/libs/weibo.sdk.android.sso.3.0.1-leancloud.jar')
+
+    // LeanCloud 基础包
+    compile ('cn.leancloud.android:avoscloud-sdk:v3.+')
+
+    // 推送与实时聊天需要的包
+    compile ('cn.leancloud.android:avoscloud-push:v3.+@aar'){transitive = true}
+
+    // LeanCloud 统计包
+    compile ('cn.leancloud.android:avoscloud-statistics:v3.+')
+
+    // LeanCloud 用户反馈包
+    compile ('cn.leancloud.android:avoscloud-feedback:v3.+@aar')
+
+    // avoscloud-sns：LeanCloud 第三方登录包
+    compile ('cn.leancloud.android:avoscloud-sns:v3.+@aar')
+    compile ('cn.leancloud.android:qq-sdk:1.6.1-leancloud')
+    // 目前新浪微博官方只提供 jar 包的集成方式
+    // 请手动下载新浪微博 SDK 的 jar 包，将其放在 libs 目录下进行集成
+
+    // LeanCloud 应用内搜索包
+    compile ('cn.leancloud.android:avoscloud-search:v3.+@aar')
 }
