Add Dormitory Select View

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".activity.LoginAndSigninActivity"/>
         <activity android:name=".activity.QQLogin"/>
         <activity android:name=".activity.WeiboLogin"/>
+        <activity android:name=".activity.DormitorySelectActivity"/>
+
 
          <!--实时通信模块、推送（均需要加入以下声明） START -->
          <!--实时通信模块、推送都要使用 PushService -->
