Add Floating Action Button Into Diary View

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'cn.leancloud.android:avoscloud-search:v3.+@aar'
     compile files('D:/Workspaces/Android/Drop/libs/weiboSDKCore_3.1.4.jar')
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     //圆形头像
     compile 'de.hdodenhof:circleimageview:2.1.0'
     //FloatingActionMenu
